Introduce static site generator