@@ -6,8 +6,13 @@ buildscript {
     }
     
     dependencies {
-        classpath "com.gradle.publish:plugin-publish-plugin:0.12.0"
+        classpath "com.gradle.publish:plugin-publish-plugin:1.0.0"
     }
+}
+
+plugins {
+    id "io.freefair.lombok" version "6.5.0.3"
+    id "com.github.ben-manes.versions" version "0.42.0"
 }
 
 apply plugin: "java-gradle-plugin"
@@ -15,9 +20,9 @@ apply plugin: "com.gradle.plugin-publish"
 apply plugin: "jacoco"
 
 group = "nl.colorize"
-version = "2022.1"
-sourceCompatibility = "11"
-targetCompatibility = "11"
+version = "2022.4.5"
+sourceCompatibility = "17"
+targetCompatibility = "17"
 compileJava.options.encoding = "UTF-8"
 sourceSets.main.java.srcDirs = ["source"]
 sourceSets.main.resources.srcDirs = ["resources"]
@@ -32,14 +37,16 @@ repositories {
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
-    implementation files("lib/appbundler.jar")
-    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+    implementation files("lib/appbundler-1.0ea.jar")
+    implementation "org.jsoup:jsoup:1.15.2"
+    implementation "org.commonmark:commonmark:0.18.1"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.9.0"
 }
 
 jar {
     from {
         configurations.runtimeClasspath
-            .filter { it.toString().endsWith("appbundler.jar") }
+            .filter { it.toString().endsWith("appbundler-1.0ea.jar") }
             .collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
@@ -53,6 +60,8 @@ gradlePlugin {
         applicationPlugin {
             id = "nl.colorize.gradle.application"
             implementationClass = "nl.colorize.gradle.application.ApplicationPlugin"
+            displayName = "Gradle application plugin"
+            description = "Gradle plugin to build native applications for Mac, iOS, Android, and Windows."
         }
     }
 }
@@ -60,20 +69,11 @@ gradlePlugin {
 pluginBundle {
     website = "http://www.colorize.nl/en/"
     vcsUrl = "https://github.com/colorizenl/gradle-application-plugin"
-    description = "Gradle plugin to build native applications for Mac, iOS, Android, and Windows."
-    tags = ["application", "mac", "macos", "android", "windows", "application bundle"]
-    
-    plugins {
-        applicationPlugin {
-            id = "nl.colorize.gradle.application"
-            displayName = "Gradle application plugin"
-        }
-    }
-    
-    mavenCoordinates {
-        groupId = "nl.colorize"
-        artifactId = "gradle-application-plugin"
-    }
+    tags = ["application", "mac", "macos", "android", "windows", "application bundle", "pwa"]
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED"])
 }
 
 task coverage(dependsOn: ["test", "jacocoTestReport"]) {
